updating info, colors, fixef scrolling action

--- a/index.html
+++ b/index.html
@@ -82,8 +82,22 @@
 			
 		</section>
 		<!-- End Banner Area -->
+		<div class="container-fluid justify-content-center">
+			<div class="row justify-content-center">
+					<div class="col-lg-8">
+						<div class="product-area-title text-center">
+						
+							<img src="/img/NashvilleSCLogo.png" alt="Smiley face" height="250" width="250">
+							<img src="/img/NashvilleFitBestOf2019logo-2.png" alt="Smiley face" height="300" width="300">
+							<img src="/img/ClimbNashvilleLogo.png" alt="Smiley face" height="" width="250">
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		<!-- Start Testimonial Area -->
-		<section id="testimonials" class="gray-bg section-full">
+		<section id="testimonials" class="gray-bg">
 				<div class="container justify-content-center">
 						<div class="row justify-content-center">
 								<div class="col-lg-8">
@@ -207,7 +221,7 @@
 </section>
 <!-- End About Area -->
 		<!-- Start Team member Area -->
-		<section id="team" class="section-full">
+		<section id="team">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-lg-8">
@@ -291,17 +305,17 @@
 		class="footer-bottom d-flex justify-content-center align-items-center"
 			style= "padding-top:10px;">
         <p class="footer-text m-0 text-center">
-			1056 E Trinity Ln, #104, Nashville, TN 37216  &#183;  <a href="tel:1-615-200-0685"
+			400 Davidson St, Nashville, TN 37213  &#183;  <a href="tel:1-615-200-0685"
 			>1(615)200-0685</a>  &#183; <a href="mailto:info@catalystptp.com" target="_top">info@catalystptp.com</a>
 			<br>
-			(Located inside CrossFit Rising Sun)
+			(Located inside CrossFit East Nashville)
 		<br>	
           Copyright &copy; 2019 | All rights reserved to Catalyst Physical
-		  Therapy and Performance, LLC. Designed by Zach Matthews.
+		  Therapy and Performance, LLC.
 		  This website does not provide medical advice and does not 
 		  direct that you undertake any specific exercise or training/rehabilitation regimen.  
 		  Consult with a physician before undertaking any information found on this website. 
-		  All visitors to this site must consent to Terms of use and Notice of Privacy Practice.
+		  All visitors to this site must consent to Terms of Use and Notice of Privacy Practice.
         </p>
       </div>
 
