--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 									<li><a href="#team">About</a></li>
 
 									
-								<a href="form.html" class="primary-btn banner-btn navbar-btn text-uppercase d-flex align-items-center text-center smooth" style ="color: black">Schedule</a>
+								<a href="form.html" class="primary-btn banner-btn navbar-btn text-uppercase d-flex align-items-center text-center smooth" >Schedule</a>
 								</ul>
 								
 								<div class=" header-social d-flex align-items-center zoomIn fadeInRight" style= "animation-duration: 2s">
@@ -193,7 +193,7 @@
 	<div class="row justify-content-center">
 		<div class="col-lg-6">
 		<div class="section-title text-center">
-			<h1>Catalyst's 3 Step Process</h1>
+			<h1 style="font-size: 4em">Catalyst's 3 Step Process</h1>
 		</div>
 		<ul class= "text-left h2 steps">
 			<li>
